pkl-core/src/test/files/LanguageSnippetTests/input/errors/delimiters/missingIfExprDelimiter.pkl
res1 = if (cond 3 else 4
res2 = 42

